# mcp-meme-sticky

./: .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
src/mcp_sticky/: main.py
src/mcp_sticky/archive/: main_old.py
src/mcp_sticky/crawlers/: google.py
src/mcp_sticky/notebooks/: custom_crawler_test.ipynb  db_vectors.ipynb  icrawler_test.ipynb
src/mcp_sticky/resources/: db.pkl  db.py  db_2lines_embeds.pkl  db_embeddings.pkl  db_keys.pkl  db_keys.py  templates.json
src/mcp_sticky/utils/: fetch.py  pickle_py.py  save.py  url_checker.py
