[project]
name = "mcp-sticky"
version = "0.1.0"
description = "mcp-local-sticky: MCP server to create WhatsApp or Telegram sticker. ✨No APIs✨"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastmcp>=2.3.4",
    "ollama>=0.4.8",
    "requests>=2.32.3",
]
