[project]
name = "mcp-sticky"
version = "0.1.0"
description = "mcp-sticky: MCP server to create WhatsApp or Telegram sticker. ✨No APIs✨"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastmcp>=2.3.4",
    "mediapipe>=0.10.21",
    "requests>=2.32.3",
]

[[project.authors]]
name = "Nikhil Kapila"
email = "info@nkapila.me"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-sticky = "mcp_sticky.main:mcp.run"

[tool.hatch.build.targets.sdist]
include = ["resources/*", "utils/*"]